updated portfolio with marvel app

--- a/index.html
+++ b/index.html
@@ -1,24 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
-    <title>Portfolio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/style.css">
+  <title>Portfolio</title>
 </head>
 
-<nav>
-    
-<div class="topnav">
-    <a class="active" href="#sean-holian">Sean Holian</a>
-    <a href="#about-me">About Me</a>
-    <a href="#contact-me">Contact Me</a>
-    <a href="#resume">Resume</a>
-  </div>
-</nav>
-
 <body>
-    
+  <header>
+    <nav>
+      <div class="topnav">
+        <a class="active" href="#sean-holian">Sean Holian</a>
+        <a href="#about-me">About Me</a>
+        <a href="#contact-me">Contact Me</a>
+        <a href="#resume">Resume</a>
+      </div>
+    </nav>
+     <div class="nav-img"></div>
+  </header>
+  
+  
+
+  <main>
+    <div class="row">
+      <div class="col">
+        <h2>About Me</h2>
+      </div>
+
+      <img src="./assets/IMG_3358.png" class="col about-me-img">
+
+      <p> Hello, I'm Sean Holian, a passionate and highly skilled coding developer completing the UNCC Full Stack Coding Bootcamp. My love for programming started when I was young, and it has grown into a lifelong passion that I continually strive to improve upon.</p>
+    </div>
+<div class="project 2">
+  <div class="col">
+<a href="https://intense-savannah-08912.herokuapp.com/"><h2> Marvel Team Database Application</h2></a>
+<img src="./assets/screenshot-marvel.png" class="marvel">
+
+</div>
+
+
+
+
+  </main>
+  <footer> Sean Holian Portfolio </footer>
+
+
+
+
+
 </body>
+
 </html>
